--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
         "redux-persist": "^6.0.0",
         "rsuite": "^5.53.2",
         "save-dev": "^0.0.1-security",
+        "sitemap": "^8.0.0",
         "styled-components": "^6.0.3",
         "swr": "^2.2.4",
         "vite": "5.4.6",
@@ -77,7 +78,8 @@
         "start": "vite",
         "build": "vite build",
         "serve": "vite preview --port 3000",
-        "build:css": "tailwindcss --postcss -i ./src/index.css -o ./src/builds/index.css"
+        "build:css": "tailwindcss --postcss -i ./src/index.css -o ./src/builds/index.css",
+        "generate-sitemap": "node script/generate-sitemap.js"
     },
     "eslintConfig": {
         "extends": [
@@ -119,6 +121,8 @@
         "postcss-import": "^15.1.0",
         "tailwind-scrollbar": "^3.1.0",
         "tailwindcss": "^3.3.3",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.8.3",
         "webpack": "5.94.0",
         "webpack-cli": "^5.1.4"
     }
